# kishi-sync

./: .gitignore  pyproject.toml
src/: game_results.json  joryu_kishi.json  kishi.json  main.py  players.json  raging_history.json
src/domain/: enums.py  game.py  match.py  player.py  rating_record.py  record.py  result_from_kishi.py
src/infra/: game_result_scraper.py  joryu_kishi_scraper.py  kishi_scraper.py  player_list_scraper.py  player_scraper.py  players_scraper.py  scraper.py  wikipedia_scraper.py
src/repository/: base.py  json_repository.py
src/usecase/: calculate_rating.py  scrape_games.py  scrape_joryu_kishi.py  scrape_kishi.py  scrape_players.py
